--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/lgh7418/study_nodejs#readme",
   "dependencies": {
+    "mysql": "^2.17.0",
     "sanitize-html": "^1.20.0"
   }
 }
